# Analog-Clock

./: CMakeLists.txt  build_run.bat  configure.bat  readme.md
assets/shaders/: vertex_shader.glsl
src/: main.cpp
